# DynEarthSol

./: .dockerignore  .gitignore  .hgignore  .zenodo.json  2vtk.py  CITATION.cff  DEVELOPING  Dockerfile  Dynearthsol.py  LICENSE  Makefile  README  README.md  array2d.hpp  barycentric-fn.cxx  barycentric-fn.hpp  bc.cxx  bc.hpp  binaryio.cxx  binaryio.hpp  brc-interpolation.cxx  brc-interpolation.hpp  build.sh  constants.hpp  defaults.cfg  dynearthsol.cxx  dynearthsol3d.cxx  fields.cxx  fields.hpp  geometry.cxx  geometry.hpp  ic-read-temp.cxx  ic-read-temp.hpp  ic.cxx  ic.hpp  input.cxx  input.hpp  markerset.cxx  markerset.hpp  matprops.cxx  (+19 more)
.github/workflows/: basic-build.yml  c-cpp.yml  exodus-build.yml  get-g++version.yml  mmg-build.yml  nvc-build.yml
3x3-C/: Makefile  dsyevc3.h  dsyevh3.h  dsyevq3.h  dsytrd3.h
ann/: Make-config  Makefile
ann/include/ANN/: ANN.h
ann/src/: Makefile
benchmarks/: 1d-consolidation-des2d_traction.cfg  1d-consolidation-des2d_water_loading.cfg  1d-consolidation-des3d_traction.cfg  1d-consolidation-des3d_water_loading.cfg  1d_consolidation-plot.ipynb  2d-consolidation.cfg  2d_consolidation-plot.ipynb  acm-error-est.cfg  acm-error-est.diff  core-complex.cfg  core-complex_mesh_opt.cfg  core-complex_new_mesh.cfg  diffusion-plot.py  diffusion.cfg  diffusion.diff  maxwell.cfg  maxwell.diff  oedometer-2d-plot.py  oedometer-2d.cfg  rifting-2d.cfg
benchmarks-cores/: Makefile  compare.py  cube.poly  test-3d-big.cfg  test-3d-equ-long.cfg  test-3d-equ-tiny.cfg  test-3d-remesh.cfg  test-3d-tiny.cfg  test-3d.cfg  test-big.cfg  test-core.cfg  test-model-long.cfg  test-model-long.poly  test-model.cfg  test-model.poly  test-rect-tiny-long.cfg  test-rect-tiny.cfg  test-rift.cfg  test-tiny-long.cfg  test-tiny.cfg  test-topo.cfg  topo.poly
examples/: 1d-consolidation.cfg  aniso_test.cfg  core-complex-3d-meshopt.cfg  core-complex-mmg.cfg  core-complex.cfg  core-complex_copy.cfg  defaults.cfg  kenner_and_segall.cfg  rifting-2d.cfg  rifting-2d.poly  sedimentary_basin.cfg  sedimentary_basin.poly  terrigenous.cfg  terrigenous.poly  test-geotherm.cfg  test-three-layer.poly  test_static_terrig.cfg  test_static_terrig.poly
examples/exomesh/: KandS.exo  cube.exo  geometry.jou  mesh.jou  simplecube.jou
examples/rate_and_state_friction/: stick_slip.poly  stick_slip_plot.ipynb  stick_slip_plot_temp.ipynb
examples/rate_and_state_friction/vel_neutral/: rsf_tri_layer_shear_test_vel_neutral.cfg
examples/rate_and_state_friction/vel_strengthening/: rsf_tri_layer_shear_test_vel_strengthening.cfg
examples/rate_and_state_friction/vel_weakening/: rsf_tri_layer_shear_test_vel_weakening.cfg
libadaptivity/: Makefile  config.status  configure
libadaptivity/adapt3d/: Makefile
libadaptivity/adapt3d/include/: confdefs.h
libadaptivity/adapt3d/src/: Adaptivity.cpp
libadaptivity/autom4te.cache/: requests
libadaptivity/include/: config.h  config.h.in
libadaptivity/load_balance/: Makefile
libadaptivity/load_balance/include/: ElementVector.h
libadaptivity/metric_field/: Makefile
libadaptivity/metric_field/include/: ErrorMeasure.h
libadaptivity/metric_field/src/: ErrorMeasure.cpp  MetricTensor.cpp
libadaptivity/tests/: Makefile  test_adapt_full.cpp
mmg3d4-4.0.1-Source/: CMakeLists.txt  README.txt
mmg3d4-4.0.1-Source/sources/: analar.c  analarcutting.c  baryct.c  boulep.c  bucket.c  cendel.c  cenrad.c  chkmsh.c  chrono.c  chrono.h  colpoi.c  coquil.c  cutelt.c  defines.h  delaunay.c  eigenv.c  hash.c  heap.c  inout.c  length.c  libmmg3d4.h  libmmg3d4_internal.h  librnbg.c  librnbg.h  locate.c  matrix.c  memory.c  memory.h  mesh.h  mmg3d.c  mmg3d1.c  mmg3d4.c  mmg3d9.c  mmg3dlib.c  movevertex.c  optbdry.c  optcoq.c  optcte.c  optlap.c  optlen.c  (+28 more)
triangle/: triangle.c
utils/: geotherm.py  gravity.py  terrigenous.py
